kubernetes/apps/ai/litellm/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "apps-to-litellm"
spec:
  endpointSelector:
    matchLabels:
      egress.policy.home.arpa/litellm: allow
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: litellm
            app.kubernetes.io/managed-by: litellm-operator
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "4000"
